--- a/dongneonni_detail_0818.html
+++ b/dongneonni_detail_0818.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="#FFFFFF">
 <!-- Save for Web Slices (동네언니_상세_0818.psb) -->
-<img id="x1103x1169x11bcx1102x1166x110bx1165x11abx1102x1175_x1109x1161x11bcx1109x1166_0818" src="images/&#x1103;&#x1169;&#x11bc;&#x1102;&#x1166;&#x110b;&#x1165;&#x11ab;&#x1102;&#x1175;_&#x1109;&#x1161;&#x11bc;&#x1109;&#x1166;_0818.jpg" width="860" height="8067" alt="" />
+<img id="x1103x1169x11bcx1102x1166x110bx1165x11abx1102x1175_x1109x1161x11bcx1109x1166_0818" <img src="images/dongneonni_detail_0818.jpg" width="860" height="8067" alt="" />
 <!-- End Save for Web Slices -->
 </body>
 </html>
