--- a/dongneonni_detail_0829.html
+++ b/dongneonni_detail_0829.html
@@ -6,5 +6,5 @@
 </head>
 <body bgcolor="#FFFFFF">
 <!-- Save for Web Slices (동네언니_상세_0829.psb) -->
-<img id="x1103x1169x11bcx1102x1166x110bx1165x11abx1102x1175_x1109x1161x11bcx1109x1166_0829" <img src="images/dongneonni_detail_0829.jpg"> width="860" 
+<img id="x1103x1169x11bcx1102x1166x110bx1165x11abx1102x1175_x1109x1161x11bcx1109x1166_0829" <img src="images/dongneonni_detail_0829.jpg"> width="860" height="8077" alt="" />
 </html>
