--- a/dongneonni_detail_0829.html
+++ b/dongneonni_detail_0829.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-<title>동네언니_상세_0829</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta charset="utf-8" />
+  <title>동네언니_상세_0829</title>
 </head>
 <body bgcolor="#FFFFFF">
-<!-- Save for Web Slices (동네언니_상세_0829.psb) -->
-<img id="x1103x1169x11bcx1102x1166x110bx1165x11abx1102x1175_x1109x1161x11bcx1109x1166_0829" src="images/&#x1103;&#x1169;&#x11bc;&#x1102;&#x1166;&#x110b;&#x1165;&#x11ab;&#x1102;&#x1175;_&#x1109;&#x1161;&#x11bc;&#x1109;&#x1166;_0829.jpg" width="860" height="8077" alt="" />
-<!-- End Save for Web Slices -->
+  <!-- 이미지 삽입 -->
+  <img src="dongneonni_detail_0829.jpg" width="860" alt="동네언니 상세 페이지" />
 </body>
 </html>
