--- a/dongneonni_detail_0829.html
+++ b/dongneonni_detail_0829.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>동네언니_상세_0829</title>
+  <title>dongneonni_detail_0829</title>
 </head>
 <body bgcolor="#FFFFFF">
   <!-- 이미지 삽입 -->
