--- a/dongneonni_detail_0829.html
+++ b/dongneonni_detail_0829.html
@@ -6,6 +6,6 @@
 </head>
 <body bgcolor="#FFFFFF">
   <!-- 이미지 삽입 -->
-  src="images/dongneonni_detail_0829.jpg" width="860" alt="dongneonni_detail_0829" />
+  <img src="images/dongneonni_detail_0829.jpg" width="860" alt="dongneonni_detail_0829" />
 </body>
 </html>
